--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,7 +105,7 @@
         <td>{{ client.state }}</td>
         <td>
           <p-rating
-            [ngModel]="client.rating"
+            [ngModel]="clients.rating"
             [readonly]="true"
             [cancel]="false"
           ></p-rating>
